--- a/thesis.bib
+++ b/thesis.bib
@@ -1,20 +1,134 @@
-@article{claerbout1991scrutiny,
-  title={A Scrutiny of the Introduction},
-  author={Claerbout, Jon F},
-  journal={The Leading Edge},
-  volume={10},
-  number={1},
-  pages={39--41},
-  year={1991},
-  publisher={Society of Exploration Geophysicists}
+@article{eidsen2009utilizing,
+title={Utilizing GPUs for Real-Time Visualization of Snow},
+author={Eidsen, Robin},
+year={2009},
+type={Master's thesis},
+pages={92},
 }
 
-@article{landes1951scrutiny,
-  title={A Scrutiny of the Abstract},
-  author={Landes, Kenneth K},
-  journal={Bulletin of the American Association of Petroleum Geologists},
-  volume={35},
-  number={7},
-  pages={1660},
-  year={1951}
+@article{saltvik2006parallel,
+title={Parallel Methods for Real-Time Visualization of Snow},
+author={Saltvik, Ingar},
+year={2006},
+type={Master's thesis},
+pages={93},
+note = {Released as a paper as well as a master thesis},
+url = {https://link.springer.com/chapter/10.1007/978-3-540-75755-9_27}
+}
+
+@article{hjerpbakk2022novel,
+title={Novel Extended Brickmap for Real-time Ray Tracing},
+author={Hjerpbakk, Aksel},
+year={2022},
+type={Master's thesis},
+pages={72},
+}
+
+@article{nordahl2013enhancing,
+title={Enhancing the HPC-Lab Snow Simulator with More Realistic Terrains and Other Interactive Features},
+author={Nordahl, Andreas},
+year={2013},
+school={NTNU}
+}
+
+@online{ma2501,
+title={Øving fra MA2501 om iterasjonsmetoder},
+url={https://raw.githubusercontent.com/steffenhaug/nm/master/int/doc/main.pdf},
+author={Haug, Steffen},
+year={2019},
+}
+
+@article{sph_techniques,
+title={Smoothed Particle Hydrodynamics Techniques for the Physics Based Simulation of Fluids and Solids},
+author={Koschier, Dan and Bender, Jan and Solenthaler, Barbara and Teschner, Matthias},
+year={2019}
+}
+
+@article{chunnoo2022simulating,
+title={Simulating Snow as an Elastoplastic Material on the GPU},
+author={Chunnoo, Mathias},
+year={2022},
+school={NTNU}
+}
+
+
+@article{gissler2020implicit,
+title={An Implicit Compressible SPH Solver for Snow Simulation},
+author={Gissler, Christoph and Henne, Andreas and Band, Stefan and Peer, Andreas and Teschner, Matthias},
+year={2020}
+}
+
+@article{krog2010avalanche,
+title={GPU-based Real-Time Snow Avalanche Simulations},
+author={Krog, Øystein Eklund},
+year={2010},
+school={NTNU}
+}
+
+@article{gjermundsen_lbm_2009,
+  title = {Lbm vs sor solver on gpus for real-time snow simulations},
+  author = {Aleksander Gjermundsen},
+  school = {Norwegian University of Science and Technology, Department of Compture Science},
+  year = {2009},
+}
+
+@article{chellia_ntnu_2010,
+  title = {The ntnu hpc snow simulator on the fermi gpu},
+  author = {Joel Chellia},
+  school = {Norwegian University of Science and Technology, Department of Compute Science},
+  year = {2010},
+}
+
+@mastersthesis{vik_real-time_2003,
+  title = {Real-time simulation of smoke through parallelizations},
+  author = {Torbjørn Vik},
+  school = {Norwegian University of Science and Technology, Department of Compute Science},
+  year = {2003},
+}
+
+@misc{euler_wikimedia,
+   author = "Wikimedia Commons",
+   title = "File:Euler method.svg --- Wikimedia Commons{,} the free media repository",
+   year = "2020",
+   url = {https://commons.wikimedia.org/w/index.php?title=File:Euler_method.svg&oldid=478643663},
+   note = "[Online; accessed 15-December-2022]"
+}
+
+@online{tma4145,
+    author={Grepstad, Sigrid},
+    title={TMA4145 – Linear Methods},
+    note={Lecture notes},
+    url={https://wiki.math.ntnu.no/_media/tma4145/2018h/course-notes_2018_18.11.pdf},
+    year={2018}
+}
+
+@book{young2003,
+    title={Iterative Solutions of Large Linear Systems},
+    author={Young, David M.},
+    note={Handout in TDT24}
+}
+
+@online{bindel2012,
+    title={Iterative methods for the 2D model problem},
+    url={https://www.cs.cornell.edu/~bindel/class/cs6210-f12/notes/lec33.pdf},
+    note={Lecture notes},
+    author={Bindel, David},
+    school={Cornell University, Department of Computer Science}
+}
+
+@online{ma2501ode,
+    url={https://wiki.math.ntnu.no/_media/ma2501/2019v/note.pdf},
+    title={Lecture Notes in TMA4215 Numerical Mathematics},
+    author={Owren, Brynjulf and Kværnø, Anne and Celledoni, Elena},
+    year={2019},
+    note={Note about stiffness and stability}
+}
+
+
+@online{ma2501fd,
+    url={https://wiki.math.ntnu.no/_media/ma2501/2019v/masterbvp.pdf},
+    title={MA2501 Fnite difference methods for two-point boundary value problems},
+    author={Celledoni, Elena},
+    year={2019},
+    note={Note about finite differences}
 }
