--- a/thesis.tex
+++ b/thesis.tex
@@ -1,9 +1,9 @@
-\documentclass[norsk,titlepage]{ntnuthesis}
+\documentclass[american,titlepage]{ntnuthesis}
 
-\title{Your Long Title}
-\shorttitle{Your Short Title}
-\author{Your Name}
-\shortauthor{Your Short Name}
+\title{Memory performance tradeoffs of CUDA integration kernels}
+\shorttitle{CUDA memory tradeoffs}
+\author{Steffen Haug}
+\shortauthor{Steffen Haug}
 \date{\displaydate{date}}
 
 \addbibresource{thesis.bib}
@@ -24,14 +24,14 @@
 \printglossary                    % Print glossary
 
 \input{chapters/1-introduction}
-\input{chapters/2-usage.tex}
-\input{chapters/3-structure.tex}
-\input{chapters/4-conclusion.tex}
+\input{chapters/2-background.tex}
+% \input{chapters/3-method.tex}
+% \input{chapters/4-conclusion.tex}
 
 \chapter*{\bibname}
 \printbibliography[heading=none]
 
-\input{chapters/papers.tex}
+% \input{chapters/papers.tex}
 
 \appendix
 \input{appendices/a-appendix.tex}
