--- a/thesis.bib
+++ b/thesis.bib
@@ -52,7 +52,7 @@ school={NTNU}
 }
 
 
-@article{gissler2020implicit,
+@article{icsph,
 title={An Implicit Compressible SPH Solver for Snow Simulation},
 author={Gissler, Christoph and Henne, Andreas and Band, Stefan and Peer, Andreas and Teschner, Matthias},
 year={2020}
@@ -102,12 +102,6 @@ school={NTNU}
     year={2018}
 }
 
-@book{young2003,
-    title={Iterative Solutions of Large Linear Systems},
-    author={Young, David M.},
-    note={Handout in TDT24}
-}
-
 @online{bindel2012,
     title={Iterative methods for the 2D model problem},
     url={https://www.cs.cornell.edu/~bindel/class/cs6210-f12/notes/lec33.pdf},
@@ -131,4 +125,106 @@ school={NTNU}
     author={Celledoni, Elena},
     year={2019},
     note={Note about finite differences}
+}
+
+@article{monaghan05,
+    title={Smoothed Particle Hydrodynamics},
+    author={Joseph Monaghan},
+    year={2005},
+}
+
+@book{young2003,
+title={Iterative Solutions of Large Linear Systems},
+author={Young, David M.},
+note={Handout in TDT24}
+}
+
+@inproceedings{hoefler2021datamovement,
+ author = {Ivanov, Andrei and Dryden, Nikoli and Ben-Nun, Tal and Li, Shigang and Hoefler, Torsten},
+ booktitle = {Proceedings of Machine Learning and Systems},
+ editor = {A. Smola and A. Dimakis and I. Stoica},
+ pages = {711--732},
+ title = {Data Movement Is All You Need: A Case Study on Optimizing Transformers},
+ url = {https://proceedings.mlsys.org/paper/2021/file/c9e1074f5b3f9fc8ea15d152add07294-Paper.pdf},
+ volume = {3},
+ year = {2021}
+}
+
+@article{hoefler2019dataflow,
+  doi = {10.48550/ARXIV.1902.10345},
+  url = {https://arxiv.org/abs/1902.10345},
+  author = {Ben-Nun, Tal and Licht, Johannes de Fine and Ziogas, Alexandros Nikolaos and Schneider, Timo and Hoefler, Torsten},
+  keywords = {Programming Languages (cs.PL), Distributed, Parallel, and Cluster Computing (cs.DC), Performance (cs.PF), FOS: Computer and information sciences, FOS: Computer and information sciences},
+  title = {Stateful Dataflow Multigraphs: A Data-Centric Model for Performance Portability on Heterogeneous Architectures},
+  publisher = {arXiv},
+  year = {2019},
+  copyright = {arXiv.org perpetual, non-exclusive license}
+}
+
+@article{hoefler2017trends,
+author = {Unat, Didem and Dubey, Anshu and Hoefler, Torsten and Shalf, John and Abraham, Mark and Bianco, Mauro and Chamberlain, Bradford and Cledat, Romain and Edwards, H. and Finkel, Hal and Fürlinger, Karl and Hannig, Frank and Jeannot, Emmanuel and Kamil, Amir and Keasler, Jeff and Kelly, Paul and Leung, Vitus and Ltaief, Hatem and Maruyama, Naoya and Pericàs, Miquel},
+year = {2017},
+month = {05},
+title = {Trends in Data Locality Abstractions for HPC Systems},
+journal = {IEEE Transactions on Parallel and Distributed Systems},
+doi = {10.1109/TPDS.2017.2703149}
+}
+
+@article{ziogas2019quantum,
+  author    = {Alexandros Nikolaos Ziogas and
+               Tal Ben{-}Nun and
+               Guillermo Indalecio Fern{\'{a}}ndez and
+               Timo Schneider and
+               Mathieu Luisier and
+               Torsten Hoefler},
+  title     = {A Data-Centric Approach to Extreme-Scale Ab initio Dissipative Quantum
+               Transport Simulations},
+  journal   = {CoRR},
+  volume    = {abs/1912.10024},
+  year      = {2019},
+  url       = {http://arxiv.org/abs/1912.10024},
+  eprinttype = {arXiv},
+  eprint    = {1912.10024},
+  timestamp = {Fri, 03 Jan 2020 16:10:45 +0100},
+  biburl    = {https://dblp.org/rec/journals/corr/abs-1912-10024.bib},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+@book{saad_iterative,
+   title =     {Iterative methods for sparse linear systems},
+   author =    {Yousef Saad},
+   publisher = {Society for Industrial and Applied Mathematics},
+   isbn =      {9780898715347,0898715342},
+   year =      {2003},
+   edition =   {2},
+}
+
+
+@online{eigen,
+    title={Eigen},
+    author={Nuentsa-Wakam, Désiré and Guennenbaud, Gabriel},
+    url={https://gitlab.com/libeigen/eigen/-/blob/master/Eigen/src/IterativeLinearSolvers/BiCGSTAB.h},
+    retrieved={2/3/2023},
+    year={2014}
+}
+
+@book{suli_numanal,
+    title={Numerical Analysis},
+    author={Süli, Endre and Mayers, David},
+    year={2003},
+    publisher={Cambridge University Press}
+}
+
+@book{fausto_nummat,
+    title={Numerical Mathematics},
+    author={Saleri, Fausto and Sacco, Ricardo and Quarteroni, Alfio},
+    year={2000},
+    publisher={Springer}
+}
+
+@book{lambert_ode,
+    title={Numerical Methods for Ordinary Differential Systems},
+    author={Lambert, J. D.},
+    year={1991},
+    publisher={Springer}
 }
